allowed results to go through as well as add responsiveness

--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -1,10 +1,9 @@
 // VARIABLE STYLES 
 
 $primary-color: #3E2E49;
-$secondary-color: #DEDBDB;
+$secondary-color: #FFFAFA;
 
-$heading-font: 'Luckiest Guy', 'Arial';
-
+$heading-font: 'Hammersmith One', 'Arial' ;
 $body-font: 'Saira Semi Condensed', 'Helvetica' ;
 
 
