--- a/src/App.scss
+++ b/src/App.scss
@@ -1,246 +1,7 @@
 @import "./partials/setup";
 @import "./partials/variables";
 @import "./partials/global";
-@import "./partials/footer";
-@import "./partials/media-query";
-
-// GLOBAL STYLES 
-
-html {
-    scroll-behavior: smooth;
-    font-size: 62.5%;
-}
-
-* {
-    padding: 0;
-    margin: 0;
-}
-
-body {
-    font-family: $body-font;
-    font-size: 1.6rem;
-    line-height: 2.5rem;
-}
-
-
-img {
-    max-width: 100%;
-    display: block;
-    height: auto;
-}
-
-.wrapper {
-    width: 90%;
-    margin: 0 auto;
-}
-
-
-// HEADER STYLES
-
-.hero {
-	background: url(./assets/header.jpg);
-	height: 100vh;
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-attachment: fixed;
-	@include flexCenter;
-	flex-direction: column;
-	position: relative;
-}
-
-.infoContainer {
-position: absolute;
-top: 20px;
-right: 20px;
-}
-
-.fa-info-circle {
-	color: $secondary-color;
-	font-size: 4rem;
-	transition: 0.7s all ease;
-	cursor: pointer;
-
-	&:hover {
-		transform: scale(1.3);
-	}
-}
-
-.logo {
-	width: 800px;
-	padding-bottom: 20px;
-}
-
-.startBtn {
-	background-color: $primary-color;
-	color: $secondary-color;
-	font-family: $heading-font;
-	padding: 15px 40px;
-	border: none;
-	text-transform: uppercase;
-	border-radius: 20px;
-	margin-left: 30px;
-	&:hover {
-		background-color: $secondary-color;
-		color: $primary-color;
-	}
-}
-
-.selectBtn {
-	background-color: $primary-color;
-	color: $secondary-color;
-	font-family: $heading-font;
-	padding: 15px 40px;
-	border: none;
-	text-transform: uppercase;
-	border-radius: 20px;
-	margin-left: 30px;
-	cursor: pointer;
-
-	option {
-		font-family: $heading-font;
-	}
-}
-
-// MAIN STYLES
-
-.genreBackground {
-	height: 30vh;
-	background-color: $primary-color;
-	@include flexCenter;
-}
-
-.genreTitle {
-	color: $secondary-color;
-	font-family: $heading-font;
-	text-transform: uppercase;
-}
-
-
-.flexContainer {
-	display: flex;
-	flex-flow: row wrap;
-	padding: 50px 0;
-}
-
-.resultContainer {
-	list-style: none;
-	width: calc(33.3% - 20px);
-	margin: 10px;
-	display: flex;
-	flex-flow: column;
-	align-items: center;
-	padding: 25px;
-	background-color: $secondary-color;
-	color: $primary-color;
-	border-radius: 25px;
-	text-align: center;
-	border: 2px solid $primary-color;
-	position: relative;
-}
-
-.eventTitle {
-	text-transform: uppercase;
-	font-family: $heading-font;
-	font-size: 2.8rem;
-	border-bottom: 2px solid $primary-color;
-	width: 100%;
-	margin-bottom: 5px;
-}
-
-.eventImg {
-	padding: 15px 0;
-	border-radius: 15px;
-	max-height: 300px;
-}
-
-.ticketLink {
-	text-decoration: none;
-	text-transform: uppercase;
-	color: $primary-color;
-	background-color: none;
-	border: 3px solid $primary-color;
-	padding: 15px 30px;
-	transition: 0.3s ease;
-	&:hover,
-	&:focus {
-		color: $secondary-color;
-		background-color: $primary-color;
-	}
-}
-
-.scrollToTopBtn {
-	color: $primary-color;
-	background-color: transparent;
-	border: none;
-	font-size: 4rem;
-	text-align: center;
-	display: block;
-	margin: 0 auto;
-	transition: 0.3s ease-in;
-
-	&:hover {
-		transform: scale(1.1);
-	}
-}
-
-.ticketmaster {
-	color: $secondary-color;
-}
-
-
-
-// MEDIA QUERIES 
-
-@media (max-width: 1150px) {
-	.wrapper {
-		width: 100%;
-	}
-	.resultContainer {
-		width: calc(50% - 10px);
-		margin: 5px;
-	}
-}
-
-@media (max-width: 850px) {
-	.resultContainer {
-		width: 80%;
-		margin: 20px auto;
-	}
-}
-
-@media (max-width: 650px) {
-
-	.hero {
-		background-position: center;
-		
-	}
-
-	.logo {
-		padding: 0 20px;
-	}
-	.resultContainer {
-		width: 95%;
-		margin: 10px auto;
-	}
-
-	.selectBtn ,
-	.startBtn {
-		padding: 10px 25px;
-		margin-left: 5px;
-		margin-top: 25px;
-	}
-
-	.genreTitle {
-		font-size: 2rem;
-	}
-}
-
-@media (max-width:400px) {
-	.selectBtn ,
-	.startBtn {
-		padding: 10px 10px;
-		margin-left: 5px;
-		margin-top: 25px;
-	}
-}
+@import "./partials/header";
+@import "./partials/results";
+@import "./partials/footer-mq";
 
